2004-01-27 22:48  PeterB

	* libbalsa/pop3.c: copy uid to caller's buffer only if it's valid.
	* libbalsa/imap/: imap-commands.c, imap-handle.h: implement
	imap_mbox_find_unseen(): gets the list and count of unseen
	messages.
	* libbalsa/mailbox_imap.c: implement lbm_imap_get_unseen(): gets
	unread messages and sets mailbox->unread_messages and
	mailbox->has_unread_messages.

2004-01-25 20:25  PeterB

	* libbalsa/imap/imap-tls.c: compile with threads disabled.
	* libbalsa/source-viewer.c: plug memory leak.
	* libbalsa/address-entry.c, libbalsa/send.c, src/balsa-mblist.c,
	src/main.c, src/sendmsg-window.c: plug memory leaks.

2004-01-25  Pawel Salek

	Do not store authorization data in ImapMboxHandle.
	* libbalsa/imap-server.c: make imap alerts work with balsa.
	* libbalsa/mailbox.c: stick to C comment style.
	* libbalsa/mailbox_imap.c: decode attachment names. clean cache.

	* libbalsa/imap/auth-cram.c: use user_cb to get whatever
	authorization data is needed.
	* libbalsa/imap/imap-auth.[hc]: same.	
	* libbalsa/imap/imap{-handle.c,_private.h}: remove user/pass fields.
	* libbalsa/imap/imap-tls.c: get user acceptance.
	* src/information-dialog.[hc]: display messages in the status bar.
	* src/pref-manager.c: configure this.
	
2004-01-25 10:14  PeterB

	* src/: balsa-app.c, balsa-app.h, balsa-mblist.c, pref-manager.c,
	save-restore.c: use bold and oblique names to indicate mailboxes
	with unread mail and folders containing such mailboxes,
	respectively; remove all support for balsa_app.mblist_unread_color.

2004-01-24 13:01  PeterB

	* src/: balsa-message.c, balsa-message.h: BalsaMessage can subclass
	GtkNotebook--no need for a container.
	* src/balsa-message.c: connect only to widget signals, so they are
	disconnected automatically when widget is destroyed.
	* libbalsa/mailbox.c, libbalsa/mailbox.h, src/balsa-index.c: New
	mailbox column LB_MBOX_STYLE_COL, which is PANGO_STYLE_OBLIQUE for
	a message with unread children.

2004-01-23 00:36  PeterB
